crates/hdx_highlight/src/snapshots/hdx_highlight__tests__basic.snap
---
source: crates/hdx_highlight/src/tests.rs
expression: actual
---
<!DOCTYPE html>
<head>
	<style>
		:root { background: #22272E; color: hotpink }
		.tag { color: #8ddb8c }
		.punctuation { color: #d1d7e0 }
		.property { color: #6cb6ff }

		.unknown { color: grey }
		.deprecated { text-decoration: line-through }
		.experimental { text-decoration: wavy underline #bf4b8a 0.5px }
	</style>
</head>
<body>
	<pre>
		<code>
		<span class="tag">body</span><span class="punctuation">{</span><span class="property">appearance</span><span class="punctuation">:</span>initial<span class="punctuation">;</span><span class="property">color</span><span class="punctuation">:</span>blue<span class="punctuation">;</span><span class="property unknown">will-ever-exist</span><span class="punctuation">:</span> foo<span class="punctuation">;</span><span class="punctuation">}</span>
					</code>
				</pre>
			</body>
